# resume-matcher

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docker/: init-db.sql
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  Import.tsx  LanguageToggle.tsx  Layout.tsx  Match.tsx  MatchResults.tsx  ResumeList.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  ru.json
frontend/src/utils/: export.ts
src/resume_matcher/: __init__.py  config.py  db.py  main.py
src/resume_matcher/api/: __init__.py  app.py
src/resume_matcher/models/: embedding.py  llm_scorer.py
src/resume_matcher/scripts/: cli_import.py  cli_match.py  import_resumes.py
src/resume_matcher/services/: importer.py  matcher.py  resume_importer.py  resume_processor.py
src/resume_matcher/utils/: convert_file_to_text.py  file_converter.py  legacy_parser.py  ocr_handler.py  resume_parser.py  text_cleaner.py
tests/: test_convert_file_to_text.py  test_db_connection.py  test_embedding.py  test_llm_parsing.py
