[project]
name = "resume-matcher"
version = "0.1.0"
description = "AI-powered resume matching and ranking system"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "opencv-python>=4.12.0.88",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
]
