[project]
name = "resume-matcher"
version = "0.1.0"
description = "AI-powered resume matching and ranking system"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "dotenv>=0.9.9",
    "numpy<2",
    "opencv-python<4.12",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pgvector>=0.4.2",
    "pillow>=12.1.0",
    "psycopg[binary,pool]>=3.3.2",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "torch==2.2.2",
]
