[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-matcher"
version = "0.1.0"
description = "AI-powered resume matching and ranking system"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "groq>=1.0.0",
    "numpy<2",
    "opencv-python<4.12",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pgvector>=0.4.2",
    "pillow>=12.1.0",
    "psycopg[binary,pool]>=3.3.2",
    "python-multipart>=0.0.9",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "torch==2.2.2",
    "uvicorn>=0.32.0",
]

[project.scripts]
resume-matcher = "resume_matcher.main:main"
import-resumes = "resume_matcher.scripts.cli_import:main"
match-vacancy = "resume_matcher.scripts.cli_match:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
    "types-psycopg2>=2.9.21.20251012",
    "types-tqdm>=4.67.0.20250809",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "Q", "SIM", "C4"]
ignore = ["E501"]  # line too long

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true
no_implicit_reexport = false
packages = ["resume_matcher"]

exclude = [
  "^tests/",
  "^scripts/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/resume_matcher"]